--- a/src/Components/Meals/AvailableMeals.module.css
+++ b/src/Components/Meals/AvailableMeals.module.css
@@ -16,6 +16,11 @@
   color: white;
 }
 
+.MealsError{
+  text-align: center;
+  color: red;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
